# bare-trader

./: .env.paper.example  .env.prod.example  .gitignore  CHANGELOG.md  CONTEXTS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  MCP-PLAN.md  PLAN-1.1.0.md  PORTFOLIO.md  README.md  TEST-PLAN.md  TIMING_INDICATORS.md  blink.toml  mcp-wrapper.sh  pyproject.toml
.cursor/commands/: build-feature.md  build-next-feature.md  test-feature.md
.cursor/rules/: autotrader.mdc
changes/: feature-default-sell.md  feature-oms-scaffold.md
config/: notifications.yaml.example  orders.yaml  strategies.yaml
docs/: INSTALLATION_PATHS.md  INSTALLATION_WORKFLOW.md  PATH_RESOLUTION_FIX.md  QUICK_START.md  SCHEDULING_ANALYSIS.md  SCHEDULING_IMPLEMENTATION_SUMMARY.md  SCHEDULING_REPORT.md  agent-guide.md  cli-mcp-usage.md
scripts/: analyze_timing_indicators.py  list_mcp_tools.py  test_installation.py
tests/: __init__.py  mocks.py  test_app_services.py  test_audit.py  test_broker.py  test_cli.py  test_cli_mcp_parity.py  test_config.py  test_engine_reconcile.py  test_errors.py  test_ledger.py  test_mcp_contract.py  test_mcp_limits.py  test_mcp_server.py  test_mock_broker.py  test_optimization_params.py  test_orders.py  test_safety_pending_orders.py  test_schemas.py  test_trade_analysis.py
tests/indicators/: test_indicators.py
tests/notifications/: test_app_notifications.py  test_discord.py  test_formatters.py  test_manager.py  test_webhook.py
tests/optimization/: test_optimizer.py
tests/visualization/: test_chart.py
trader/: __init__.py  audit.py  errors.py
trader/app/: data.py  (+10 more)
(+72 files in other folders)
